--- a/style.css
+++ b/style.css
@@ -1,114 +1,124 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-.container {
-    background: #278fe4;
-
+  }
+  
+  .container {
     width: 100%;
     height: 100vh;
-
+  
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-}
-
-.container h1 {
-    font-family: 'Cinzel', sans-serif;
-    font-size: 3em;
-
-    text-decoration: underline;
-
-    color: #fff;
-
-    padding: 40px;
-}
-
-.content {
-    width: 500px;
-    height: 330px;
-
-    background: #a669eb;
-
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding-top: 20px;
-
-    border-radius: 7px;
-}
-
-.content .buttons {
-    width: 100%;
-
-    padding-bottom: 80px;
-
+  
+    background-color: #34ace0;
+    opacity: 0.8;
+  }
+  
+  h1 {
+    font-family: 'Ewert', cursive;
+    font-size: 40px;
+    margin-bottom: 40px;
+  
+    color: rgb(34, 37, 37);
+  }
+  
+  .buttons {
+    width: 700px;
+    height: 200px;
+  
     display: flex;
     align-items: center;
     justify-content: space-around;
-}
-
-.content .btn {
-    width: 100px;
+  
+    margin-bottom: 20px;
+  
+    border-radius: 15px;
+    background-color: #227093;
+  }
+  
+  button {
+    width: 150px;
     height: 40px;
-
-    font-family: 'Roboto', sans-serif;
-    font-size: 23px;
-
-    background: #4c4d93;
-    color: #fff;
-
-    cursor: pointer;
-
-    border-radius: 8px;
-}
-
-.content .btn:hover {
-    font-size: 25px;
-
-    background: #5758a1;
-}
-
-.content .info {
-    color: #fff;
-
-    text-align: center;
-}
-
-.content .info p {
-    padding: 5px;
-    text-transform: capitalize;
-}
-
-.content .info .final-result {
-    font-size: 25px;
-    font-weight: 600;
-}
-
-.content .restart {
-    width: 100%;
-    height: 40px;
-    
-    margin: 20px 0;
-
-    background: #5a7e9b;
-    color: #fff;
-
-    font-size: 23px;
-
-    cursor: pointer;
-
-    border-radius: 8px;
-}
-
-.content .restart:hover {
-    background: #4a677e;
-
+  
+    border: none;
+    border-radius: 10px;
+  
     font-size: 27px;
-}
+    font-family: 'Ewert', cursive;
+  
+    cursor: pointer;
+  }
+  
+  button:hover {
+    font-size: 29px;
+  }
+  
+  #rock {
+    color: white;
+    background-color: #888787;
+  }
+  
+  #rock:hover {
+    background-color: #84817a;
+  }
+  
+  #paper {
+    color: black;
+    background-color: #f7f1e3;
+  }
+  
+  #paper:hover {
+    background-color: #e2dfd6;
+  }
+  
+  #scissors {
+    color: white;
+    background-color: #ff5252;
+  
+    font-size: 25px;
+  }
+  
+  #scissors:hover {
+    background-color:  #db4848;
+    font-size: 27px;
+  }
+  
+  #result {
+    width: 300px;
+    height: 50px;
+  
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 23px;
+    color: white;
+    background-color: rgb(250, 247, 247);
+  }
+  
+  #restartBtn {
+    width: 170px;
+    height: 40px;
+  
+    font-size: 28px;
+    font-family: 'Lacquer', cursive;
+  
+    color:white;
+    background-color: rgb(45, 158, 88);
+  
+    margin-bottom: 18px;
+  
+    border: none;
+    border-radius: 7px;
+    box-shadow: 1px 0px 10px 1px  black;
+  
+    cursor: pointer;
+  }
+  
+  #restartBtn:hover {
+    font-size: 30px;
+    background-color: rgb(43, 139, 80);
+  }
