--- a/style.css
+++ b/style.css
@@ -1,124 +1,90 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
+.container {
     width: 100%;
     height: 100vh;
-  
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+    background-color: rgb(240, 240, 240);
+
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+
     align-items: center;
-  
-    background-color: #34ace0;
-    opacity: 0.8;
-  }
-  
-  h1 {
-    font-family: 'Ewert', cursive;
-    font-size: 40px;
-    margin-bottom: 40px;
-  
-    color: rgb(34, 37, 37);
-  }
-  
-  .buttons {
-    width: 700px;
-    height: 200px;
-  
+    justify-content: center;
+
+    text-transform: capitalize;
+
+    font-family: 'Montserrat', sans-serif;
+}
+
+header {
+    margin: 1rem;
+    padding: 1rem;
+    border: 7px solid;
+    animation: colorchange 3s linear 0s infinite;
+    color: white;
+    background-color: rgb(29, 29, 29);
+}
+
+header h1 {
+    text-align: center;
+    font-size: 2.3rem;
+}
+
+main {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-  
-    margin-bottom: 20px;
-  
-    border-radius: 15px;
-    background-color: #227093;
-  }
-  
-  button {
-    width: 150px;
-    height: 40px;
-  
+}
+
+img {
+    width: 9rem;
+}
+
+img:hover {
+    opacity: 70%;
+}
+
+
+button {
     border: none;
-    border-radius: 10px;
-  
-    font-size: 27px;
-    font-family: 'Ewert', cursive;
-  
+    background-color: unset;
+
     cursor: pointer;
-  }
-  
-  button:hover {
-    font-size: 29px;
-  }
-  
-  #rock {
-    color: white;
-    background-color: #888787;
-  }
-  
-  #rock:hover {
-    background-color: #84817a;
-  }
-  
-  #paper {
-    color: black;
-    background-color: #f7f1e3;
-  }
-  
-  #paper:hover {
-    background-color: #e2dfd6;
-  }
-  
-  #scissors {
-    color: white;
-    background-color: #ff5252;
-  
-    font-size: 25px;
-  }
-  
-  #scissors:hover {
-    background-color:  #db4848;
-    font-size: 27px;
-  }
-  
-  #result {
-    width: 300px;
-    height: 50px;
-  
+}
+
+.message-box {
+    width: 100%;
+    height: 30vh;
+
     display: flex;
-    text-align: center;
-    justify-content: center;
+    flex-direction: column;
+
     align-items: center;
-    font-size: 23px;
-    color: white;
-    background-color: rgb(250, 247, 247);
-  }
-  
-  #restartBtn {
-    width: 170px;
-    height: 40px;
-  
-    font-size: 28px;
-    font-family: 'Lacquer', cursive;
-  
-    color:white;
-    background-color: rgb(45, 158, 88);
-  
-    margin-bottom: 18px;
-  
-    border: none;
-    border-radius: 7px;
-    box-shadow: 1px 0px 10px 1px  black;
-  
-    cursor: pointer;
-  }
-  
-  #restartBtn:hover {
-    font-size: 30px;
-    background-color: rgb(43, 139, 80);
-  }
+    justify-content:space-around;
+}
+
+.message {
+    width: 100%;
+    text-align: center;
+    align-self: center;
+    font-weight: 400;
+    font-size: 1.4rem;
+    background-color: rgb(4, 8, 4);
+}
+
+.restart-btn {
+    width: 10rem;
+    height: 3rem;
+    font-size: 1.3rem;
+    color: rgb(236, 236, 236);
+    background-color: rgb(32, 32, 32);
+    border: 6px double;
+    animation: colorchange 0.5s infinite;
+}
+
+@keyframes colorchange {
+    0% {border-color: rgb(243, 110, 110);}
+    33% {border-color: rgb(65, 199, 125);}
+    66% {border-color: rgb(59, 59, 145);}
+    100% {border-color: rgb(233, 104, 104);}
+}
